admission/ValidatingAdmissionPolicy/policies/fsgroup/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: fsgroup-pod-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4f688ec5-d914-51b4-86b5-c204447bae99
  labels:
    check-fsgroup-pod.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    check-fsgroup-pod.security.kolteq.com/audit: 'false-true'
    check-fsgroup-pod.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: fsgroup-pod
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-fsgroup-pod.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: fsgroup-pod-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4f688ec5-d914-51b4-86b5-c204447bae99
  labels:
    check-fsgroup-pod.security.kolteq.com/warn: 'false-true'
    check-fsgroup-pod.security.kolteq.com/audit: 'false-true'
    check-fsgroup-pod.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: fsgroup-pod
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-fsgroup-pod.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: fsgroup-pod-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4f688ec5-d914-51b4-86b5-c204447bae99
  labels:
    check-fsgroup-pod.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    check-fsgroup-pod.security.kolteq.com/enforce: 'false-true'
    check-fsgroup-pod.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: fsgroup-pod
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-fsgroup-pod.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: fsgroup-pod-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4f688ec5-d914-51b4-86b5-c204447bae99
  labels:
    check-fsgroup-pod.security.kolteq.com/audit: 'false-true'
    check-fsgroup-pod.security.kolteq.com/enforce: 'false-true'
    check-fsgroup-pod.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: fsgroup-pod
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-fsgroup-pod.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: fsgroup-pod-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4f688ec5-d914-51b4-86b5-c204447bae99
  labels:
    check-fsgroup-pod.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    check-fsgroup-pod.security.kolteq.com/audit: 'false-true'
    check-fsgroup-pod.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: fsgroup-pod
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-fsgroup-pod.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: fsgroup-pod-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4f688ec5-d914-51b4-86b5-c204447bae99
  labels:
    check-fsgroup-pod.security.kolteq.com/enforce: 'false-true'
    check-fsgroup-pod.security.kolteq.com/audit: 'false-true'
    check-fsgroup-pod.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: fsgroup-pod
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-fsgroup-pod.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
