admission/ValidatingAdmissionPolicy/policies/fsgroup/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: fsgroup-pod
  annotations:
    security.kubeapt.io/displayName: "Fsgroup"
    security.kubeapt.io/description: "spec.securityContext.fsGroup must be undefined or a non-zero value (> 0)."
    security.kubeapt.io/resource: "Pods"
    security.kubeapt.io/severity: "3"
    security.kubeapt.io/remediation: "Set spec.securityContext.fsGroup to >0 or omit it. Fields: spec.securityContext.fsGroup."
    security.kubeapt.io/product: "Kubernetes"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ''
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validations:
  - expression: |
      !has(object.spec.securityContext) || !has(object.spec.securityContext.fsGroup) || object.spec.securityContext.fsGroup > 0
    message: |
      spec.securityContext.fsGroup must be undefined or a non-zero value (> 0).
